# tasks

./: .dockerignore  .env  .env.local.example  .firebaserc  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package.json  sqlx-data.json
.github/workflows/: build-api.yml  build-web.yml  general.yml
configuration/: base.yml
migrations/: 20230209062942_initialize.down.sql  20230209062942_initialize.up.sql
src/: auth.rs  config.rs  entities.rs  errors.rs  lib.rs  main.rs  response.rs  startup.rs
src/context/: state.tsx
src/dto/: assignment.rs  auth.rs  cohort.rs  mod.rs  request.rs  score.rs  student.rs  user.rs
src/entities/: assignment.rs  cohort.rs  mod.rs  score.rs  student.rs
src/lib/: firebase.ts
src/pages/: _app.tsx  dashboard.tsx  index.tsx
src/pages/api/auth/: [...nextauth].ts
src/routes/: assignment.rs  auth.rs  cohort.rs  mod.rs  score.rs  student.rs  user.rs
src/services/: auth.rs  classroom.rs  dto.rs  mod.rs  user.rs
web/: .env.local.example  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
web/src/components/: Auth.tsx  Dashboard.tsx  Layout.tsx  Loading.tsx
web/src/context/: state.tsx
web/src/lib/: api.ts  entities.ts  oauth.ts
web/src/pages/: dashboard.tsx  index.tsx  login.tsx
web/src/pages/assignments/: create.tsx  index.tsx
web/src/pages/assignments/[id]/: grading.tsx  index.tsx
web/src/pages/cohorts/: [id].tsx  create.tsx  index.tsx
web/src/pages/cohorts/[id]/: index.tsx
web/src/pages/cohorts/[id]/students/: [student_id].tsx  add.tsx  upload.tsx
